new spec and endpoints done, post on /events returns 404 and a form of user (from the application) persistence should be implemented
