# badges-impl/src/main/java/amt/rmgg/gamification/api/endpoints/EventTypesApiController.java
@@ -1,18 +1,12 @@
 package amt.rmgg.gamification.api.endpoints;
 
 import amt.rmgg.gamification.api.EventTypesApi;
-import amt.rmgg.gamification.api.RulesApi;
 import amt.rmgg.gamification.api.model.EventType;
-import amt.rmgg.gamification.api.model.Rule;
 import amt.rmgg.gamification.api.util.ApiKeyManager;
 import amt.rmgg.gamification.entities.ApplicationEntity;
-import amt.rmgg.gamification.entities.BadgeEntity;
 import amt.rmgg.gamification.entities.EventTypeEntity;
-import amt.rmgg.gamification.entities.RuleEntity;
 import amt.rmgg.gamification.repositories.AppRepository;
-import amt.rmgg.gamification.repositories.BadgeRepository;
 import amt.rmgg.gamification.repositories.EventTypeRepository;
-import amt.rmgg.gamification.repositories.RuleRepository;
 import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -28,15 +22,12 @@ import javax.validation.Valid;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Controller
 public class EventTypesApiController implements EventTypesApi {
     @Autowired
     private ApiKeyManager apiKeyManager;
-    @Autowired
-    RuleRepository ruleRepository;
     @Autowired
     AppRepository appRepository;
     @Autowired
@@ -54,79 +45,65 @@ public class EventTypesApiController implements EventTypesApi {
             return ResponseEntity.notFound().build();
         }
 
-        Optional<BadgeEntity> badgeEntity = badgeRepository.findById((long)rule.getBadgeId());
-        if(badgeEntity.isEmpty()){
-            return ResponseEntity.notFound().build();
-        }
+        EventTypeEntity newEventTypeEntity = toEventTypeEntity(eventType);
+        applicationEntity.getEventTypes().add(newEventTypeEntity);
 
-        Optional<EventTypeEntity> eventTypeEntity = eventTypeRepository.findById(rule.getEventTypeId());
-        if(eventTypeEntity.isEmpty()){
-            return ResponseEntity.notFound().build();
-        }
-
-        RuleEntity newRuleEntity = toRuleEntity(rule, badgeEntity.get(), eventTypeEntity.get());
-        applicationEntity.getRules().add(newRuleEntity);
-
-        ruleRepository.save(newRuleEntity);
+        eventTypeRepository.save(newEventTypeEntity);
 
         try {
-            return ResponseEntity.created(new URI("/rules/" + newRuleEntity.getId())).body(rule);
+            return ResponseEntity.created(new URI("/eventTypes/" + newEventTypeEntity.getId())).body(toEventType(newEventTypeEntity));
         } catch (URISyntaxException e) {
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(null);
         }
     }
 
-    public ResponseEntity<List<Rule>> getRules() {
+    public ResponseEntity<List<EventType>> getEventTypes() {
         String apikey = httpServletRequest.getHeader("x-api-key");
         ApplicationEntity applicationEntity = apiKeyManager.getApplicationEntityFromApiKey(apikey);
 
         return ResponseEntity.ok(
                 applicationEntity
-                        .getRules()
+                        .getEventTypes()
                         .stream()
-                        .map(EventTypesApiController::toRule)
+                        .map(EventTypesApiController::toEventType)
                         .collect(Collectors.toList()));
     }
 
     @Override
-    public ResponseEntity<Rule> getRule(@ApiParam(value = "",required=true) @PathVariable("id") Integer id) {
+    public ResponseEntity<EventType> getEventType(@ApiParam(value = "",required=true) @PathVariable("id") Integer id) {
         String apikey = httpServletRequest.getHeader("x-api-key");
         ApplicationEntity applicationEntity = apiKeyManager.getApplicationEntityFromApiKey(apikey);
 
-        List<RuleEntity> rules = applicationEntity
-                .getRules()
+        List<EventTypeEntity> eventTypes = applicationEntity
+                .getEventTypes()
                 .stream()
-                .filter(r -> r.getId() == id)
+                .filter(et -> et.getId() == id)
                 .limit(1)
                 .collect(Collectors.toList());
 
-        if(rules.size() != 1){
+        if(eventTypes.size() != 1){
             throw new ResponseStatusException(HttpStatus.NOT_FOUND);
         }
-        RuleEntity ruleEntity = rules.get(0);
-        return ResponseEntity.ok(toRule(ruleEntity));
+        EventTypeEntity eventTypeEntity = eventTypes.get(0);
+        return ResponseEntity.ok(toEventType(eventTypeEntity));
     }
 
 
-    public static EventTypeEntity toEventType(EventType eventType) {
+    public static EventTypeEntity toEventTypeEntity(EventType eventType) {
         EventTypeEntity entity = new EventTypeEntity();
-        eventTypeEntity.
-
-
-        entity.setEventType(eventType);
-        entity.setThreshold(rule.getThreshold());
-        entity.setBadge(badge);
+        entity.setName(eventType.getName());
+        entity.setInitialValue(entity.getInitialValue());
         return entity;
     }
 
 
-    public static Rule toRule(RuleEntity entity){
-        Rule rule = new Rule();
-        rule.setEventTypeId(entity.getEventType().getId());
-        rule.setThreshold(entity.getThreshold());
-        rule.setBadgeId((int) entity.getBadge().getId());
-        return rule;
+    public static EventType toEventType(EventTypeEntity entity){
+        EventType eventType = new EventType();
+        eventType.setId(entity.getId());
+        eventType.setName(entity.getName());
+        eventType.setInitialValue(entity.getInitialValue());
+        return eventType;
     }
 
 }
